[package]
name = "serve"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-cors = "0.5.4"
serde = "1.0.130"
futures = "0.3.17"
ecies = "0.2.1"
hex = "0.4.3"
aes = "0.7.5"
block-modes = "0.8.1"
hex-literal = "0.3.3"